--- a/hr-worker.properties
+++ b/hr-worker.properties
@@ -1,17 +1,17 @@
-test.config=My config value default profile
+test.config=My config value wtf profile
 
-server.port=${PORT:0}
+# server.port=${PORT:0}
 
-eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+# eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+# eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 
-spring.datasource.url=jdbc:h2:mem:workerdb
-spring.datasource.username=sa
-spring.datasource.password=
+# spring.datasource.url=jdbc:h2:mem:workerdb
+# spring.datasource.username=sa
+# spring.datasource.password=
 
-spring.h2.console.path=/h2-console
-spring.h2.console.enabled=true
+# spring.h2.console.path=/h2-console
+# spring.h2.console.enabled=true
 
-spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.hibernate.ddl-auto=update
